<resources>
    <string name="app_name">CBR Staff</string>
    <string name="home_screen_title">CBR Gratuities</string>
    <string name="new_tips">New</string>
    <string name="outstanding_tips">Outstanding</string>
    <string name="outstanding_none">None Outstanding</string>
    <string name="display_euro">€%.2f</string>
    <string name="display_dollar">$%.2f</string>
    <string name="display_sterling">£%.2f</string>
    <string name="outstanding_title">Outstanding Tips</string>
    <string name="cruise_title">New Cruise</string>
    <string name="tips_received">Tips Received</string>
    <string name="euro_sign">€</string>
    <string name="dollar_sign">$</string>
    <string name="sterling_sign">£</string>
    <string name="cruise_details_confirm">Next</string>
    <string name="edit_cruise_title">Edit Cruise</string>
    <string name="update_cruise">Update</string>
    <string name="cancel_symbol">Cancel</string>
    <string name="confirm_symbol">Confirm</string>
    <string name="main_screen_loading">Loading&#8230;</string>
    <string name="exchange_title">Currency Exchange</string>
    <string name="dollar_exchange_title">Dollar</string>
    <string name="sterling_exchange_title">Sterling</string>
    <string name="exchange_arrow">Right Arrow</string>
    <string name="exchange_button_text">Exchange</string>
    <string name="add_staff_text">New Staff</string>
    <string name="add_staff_title">Add Staff</string>
    <string name="new_staff_name">Name</string>
    <string name="remove_staff">Remove %s?</string>
    <string name="removed_staff">Removed %s</string>
    <string name="paid_staff">Paid %s €%.2f</string>
    <string name="pay_staff">Pay %s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
