<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exchange">

    <TextView
        android:id="@+id/exchangeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/exchange_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/overallExchangeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangeTitle">

        <LinearLayout
            android:id="@+id/dollarLayoutOuter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dollarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/dollar_exchange_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <LinearLayout
                android:id="@+id/dollarLayoutInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/dollarAmountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:gravity="center_horizontal"
                    android:hint="@string/dollar_sign"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:textSize="36sp"
                    tools:targetApi="o" />

                <ImageView
                    android:id="@+id/dollarArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/exchange_arrow"
                    android:rotation="180"
                    app:srcCompat="?attr/actionModeCloseDrawable" />

                <EditText
                    android:id="@+id/dollarEuroText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:gravity="center_horizontal"
                    android:hint="@string/euro_sign"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:textSize="36sp"
                    tools:targetApi="o" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sterlingLayoutOuter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sterlingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/sterling_exchange_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <LinearLayout
                android:id="@+id/sterlingLayoutInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/sterlingAmountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:gravity="center_horizontal"
                    android:hint="@string/sterling_sign"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:textSize="36sp"
                    tools:targetApi="o" />

                <ImageView
                    android:id="@+id/sterlingArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/exchange_arrow"
                    android:rotation="180"
                    app:srcCompat="?attr/actionModeCloseDrawable" />

                <EditText
                    android:id="@+id/sterlingEuroText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:gravity="center_horizontal"
                    android:hint="@string/euro_sign"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:textSize="36sp"
                    tools:targetApi="o" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/confirmExchangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/exchange_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallExchangeLayout" />
</android.support.constraint.ConstraintLayout>