<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cruise">

    <TextView
        android:id="@+id/addStaffTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cruise_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cruiseNumLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStaffTitle">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/decreaseCruiseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:fabCustomSize="100dp"
            app:srcCompat="@android:drawable/button_onoff_indicator_on" />

        <TextView
            android:id="@+id/cruiseNumDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="72sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/increaseCruiseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:fabCustomSize="100dp"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <TextView
        android:id="@+id/staffNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tips_received"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cruiseNumLayout" />

    <LinearLayout
        android:id="@+id/tipsCurrencyLayoutOuter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staffNameInput">

        <LinearLayout
            android:id="@+id/tipsCurrencyLayoutInner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dollarTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="4"
                android:gravity="center_horizontal"
                android:hint="@string/dollar_sign"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:textSize="64sp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/sterlingTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="4"
                android:gravity="center_horizontal"
                android:hint="@string/sterling_sign"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:textSize="64sp"
                tools:targetApi="o" />
        </LinearLayout>

        <EditText
            android:id="@+id/euroTips"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="center_horizontal"
            android:hint="@string/euro_sign"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:textSize="64sp"
            tools:targetApi="o" />

    </LinearLayout>

    <Button
        android:id="@+id/addStaffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="32dp"
        android:text="@string/cruise_details_confirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsCurrencyLayoutOuter" />

</android.support.constraint.ConstraintLayout>